--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,21 @@
-# Compiled class file
+# Build / maven artifacts
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
+target/
+pom.xml.versionsBackup
+dependency-reduced-pom.xml
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Package Files
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# IntelliJ project files
+.idea/
+*.iml
+
