--- a/pom.xml
+++ b/pom.xml
@@ -100,21 +100,25 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <header>${project.basedir}/.mvn/license/header.txt</header>
-                    <properties>
-                        <owner>${project.organization.name}</owner>
-                    </properties>
+                    <licenseSets>
+                        <licenseSet>
+                            <header>${project.basedir}/.mvn/license/header.txt</header>
+                            <includes>
+                                <include>pom.xml</include>
+                                <include>src/main/java/**</include>
+                                <include>src/test/java/**</include>
+                            </includes>
+                            <excludes>
+                                <exclude>**/*.md</exclude>
+                            </excludes>
+                        </licenseSet>
+                    </licenseSets>
                     <mapping>
                         <java>SLASHSTAR_STYLE</java>
                     </mapping>
-                    <includes>
-                        <include>pom.xml</include>
-                        <include>src/main/java/**</include>
-                        <include>src/test/java/**</include>
-                    </includes>
-                    <excludes>
-                        <exclude>**/*.md</exclude>
-                    </excludes>
+                    <properties>
+                        <owner>${project.organization.name}</owner>
+                    </properties>
                     <strictCheck>true</strictCheck>
                 </configuration>
                 <dependencies>
