--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
 
         <!-- test -->
         <junit.version>5.11.4</junit.version>
-        <hamcrest.version>3.0</hamcrest.version>
+        <assertj.version>3.27.3</assertj.version>
 
         <!-- build -->
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
@@ -244,15 +244,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest</artifactId>
-            <version>${hamcrest.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.27.3</version>
+            <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
