--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -34,15 +34,11 @@ jobs:
           java-version: 1.8
       - name: Set up JDK 11 to support jigsaw module system
         id: setup-java-11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
+          distribution: temurin
           java-version: 11
-      - name: Setup maven cache
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-m2-repo-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2-repo-
+          cache: maven
       - name: Perform build
         run: .github/scripts/build.sh
         shell: bash
