--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+        <!-- sonar -->
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.organization>talsma-ict</sonar.organization>
+        <sonar.projectKey>${sonar.organization}_${project.artifactId}</sonar.projectKey>
+
         <!-- test -->
         <junit.version>5.11.4</junit.version>
         <assertj.version>3.27.3</assertj.version>
