--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Build and deploy artifacts
 
 on:
   push:
-    branches: [ 'develop', 'master', 'build-test' ]
+    branches: [ 'develop', 'master' ]
     tags-ignore: [ '**' ]
 
 jobs:
