--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,17 @@
-name: Build and deploy artifacts
+name: Deploy artifacts
 
 on:
-  push:
+  workflow_run:
+    workflows: [ 'Build and test' ]
     branches: [ 'develop', 'master' ]
-    tags-ignore: [ '**' ]
 
 jobs:
   build:
-    name: Build and deploy
+    name: Deploy
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - name: Check out code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Set up JDK 8 for compiling Java 8 compatible bytecode
-        id: setup-java-8
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 8
-      - name: Set up JDK 11 with Maven Central deployment
+      - name: Set up Maven Central deployment
         uses: actions/setup-java@v4
         with: # update the settings.xml
           distribution: temurin
@@ -31,10 +22,6 @@ jobs:
           server-password: MAVEN_CENTRAL_TOKEN
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
-      - name: Build with Maven
-        run: ./mvnw --batch-mode clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       - name: Publish to Apache Maven Central
         run: ./mvnw --batch-mode --no-snapshot-updates -Ppublish deploy -DskipTests
         env:
