--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Set up JDK 8 for compiling Java 8 compatible bytecode
+        id: setup-java-8
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 8
       - name: Set up Maven Central deployment
         uses: actions/setup-java@v4
         with: # update the settings.xml
