--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
         <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
         <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
         <coveralls.jaxb-api.version>2.3.1</coveralls.jaxb-api.version>
+        <sonar-maven-plugin.version>5.0.0.4389</sonar-maven-plugin.version>
         <umldoclet.version>2.2.1</umldoclet.version>
     </properties>
 
@@ -283,7 +284,7 @@
                 <plugin>
                     <groupId>org.sonarsource.scanner.maven</groupId>
                     <artifactId>sonar-maven-plugin</artifactId>
-                    <version>5.0.0.4389</version>
+                    <version>${sonar-maven-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.eluder.coveralls</groupId>
