--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,17 +11,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Set up JDK 8 for compiling Java 8 compatible bytecode
-        id: setup-java-8
+      - name: Set up Java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: 8
-      - name: Set up JDK 11 with Maven Central deployment
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 11
+          java-version: |
+            8
+            11
+          mvn-toolchain-id: |
+            jdk8
+            jdk11
           cache: maven
       - name: Build with Maven
         run: ./mvnw --batch-mode clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
