--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,13 @@ jobs:
             jdk8
             jdk11
           cache: maven
+      - name: Cache Sonar packages
+          uses: actions/cache@v4
+          with:
+            path: ~/.sonar/cache
+            key: ${{ runner.os }}-sonar
+            restore-keys: ${{ runner.os }}-sonar
       - name: Build with Maven
-        run: ./mvnw --batch-mode clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+        run: ./mvnw --batch-mode clean verify sonar:sonar
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
