--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
 
         <!-- build -->
         <coveralls.jaxb-api.version>2.3.1</coveralls.jaxb-api.version>
+        <umldoclet.version>2.2.1</umldoclet.version>
     </properties>
 
     <build>
