Try jacoco reporting by environment-variable activated maven profile.
Signed-off-by: Sjoerd Talsma <sjoerdtalsma@users.noreply.github.com>

--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,7 @@
                     </execution>
                     <execution>
                         <id>report</id>
+                        <phase>post-integration-test</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
@@ -180,17 +181,6 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.eluder.coveralls</groupId>
-                <artifactId>coveralls-maven-plugin</artifactId>
-                <dependencies>
-                    <dependency>
-                        <groupId>javax.xml.bind</groupId>
-                        <artifactId>jaxb-api</artifactId>
-                        <version>${coveralls.jaxb-api.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -408,7 +398,7 @@
                         <executions>
                             <execution>
                                 <id>report-coveralls-coverage</id>
-                                <phase>site-deploy</phase>
+                                <phase>verify</phase>
                                 <goals>
                                     <goal>report</goal>
                                 </goals>
@@ -417,6 +407,13 @@
                         <configuration>
                             <repoToken>${env.COVERALLS_REPO_TOKEN}</repoToken>
                         </configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>javax.xml.bind</groupId>
+                                <artifactId>jaxb-api</artifactId>
+                                <version>${coveralls.jaxb-api.version}</version>
+                            </dependency>
+                        </dependencies>
                     </plugin>
                 </plugins>
             </build>
