--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,10 @@
 name: Build and test
 
-on: [ 'push', 'pull_request' ]
+on:
+  pull_request:
+    branches: [ 'develop', 'master', 'main' ]
+  push:
+    branches: [ 'develop', 'master', 'main' ]
 
 jobs:
   build:
