--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy artifacts
 on:
   workflow_run:
     workflows: [ 'Build and test' ]
-    branches: [ 'develop', 'master' ]
+    branches: [ 'develop', 'master', 'main' ]
 
 jobs:
   build:
