--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,10 @@
 name: Build and test
 
-on: [ 'push', 'pull_request' ]
+on:
+  pull_request:
+    branches: [ 'develop', 'master', 'main' ]
+  push:
+    branches: [ 'develop', 'master', 'main' ]
 
 jobs:
   build:
@@ -31,4 +35,5 @@ jobs:
       - name: Build with Maven
         run: ./mvnw --batch-mode clean verify sonar:sonar
         env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
