--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,7 @@ name: Deploy artifacts
 on:
   workflow_run:
     workflows: [ 'Build and test' ]
+    types: [ 'completed' ]
     branches: [ 'develop', 'master', 'main' ]
 
 jobs:
@@ -30,7 +31,7 @@ jobs:
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
       - name: Publish to Apache Maven Central
-        run: ./mvnw --batch-mode --no-snapshot-updates -Ppublish deploy -DskipTests
+        run: ./mvnw --batch-mode --no-snapshot-updates deploy -DskipTests -DskipLicenseCheck
         env:
           MAVEN_CENTRAL_USERNAME: ${{ secrets.SONATYPE_USER }}
           MAVEN_CENTRAL_TOKEN: ${{ secrets.SONATYPE_PASSWORD }}
