--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,4 +12,6 @@ jobs:
       - name: Determine version
         id: get_version
         shell: bash
-        run: echo "branch=${{ github.head_ref || github.ref_name }}" >> $GITHUB_OUTPUT
+        run: |
+          echo "branch=${{ github.head_ref || github.ref_name }}" >> $GITHUB_OUTPUT
+          echo "version=$(echo \"${branch}\" | sed 's/^release[/-]//')" >> $GITHUB_OUTPUT
