--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,4 +14,11 @@ jobs:
         shell: bash
         run: |
           echo "branch=${{ github.head_ref || github.ref_name }}" >> $GITHUB_OUTPUT
-          echo "version=$(echo \"${branch}\" | sed 's/^release[/-]//')" >> $GITHUB_OUTPUT
+          echo "version=$(echo \"${{ github.head_ref || github.ref_name }}\" | sed 's/^release[/-]//')" >> $GITHUB_OUTPUT
+      - name: Print version
+        id: print_version
+        shell: bash
+        run: |
+          echo "branch: ${{ steps.get_version.outputs.branch }}"
+          echo "version: ${{ steps.get_version.outputs.version }}"
+
