--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           if [[ ${BRANCH##*/} =~ ^[0-9]+\.[0-9]+\.[0-9]+(-[A-Za-z0-9\.]+)*(\+[A-Za-z0-9\.\-]+)?$ ]]; then
             echo "branch=${BRANCH}" >> $GITHUB_OUTPUT
-            echo "version=${BRANCH##*/}" >> $GITHUB_OUTPUT
+            echo "VERSION=${BRANCH##*/}" >> $GITHUB_ENV
           else
             echo "::error::Not a valid version: ${BRANCH##*/}"
             exit 1
@@ -35,21 +35,10 @@ jobs:
             jdk8
             jdk11
           cache: maven
-#      - name: Fetch branch
-#        env:
-#          BRANCH: ${{ steps.get_version.outputs.branch }}
-#        run: |
-#          git fetch origin
-#          git checkout "${BRANCH}" || git checkout -B "${BRANCH}" "origin/${BRANCH}" && git pull --ff-only && git submodule update --init --recursive
       - name: Set version
         id: set_version
-        env:
-          VERSION: ${{ steps.get_version.outputs.version }}
         run: ./mvnw --batch-mode versions:set versions:commit -DnewVersion="${VERSION}" -DprocessAllModules=true
       - name: Commit and tag new version
-        env:
-#          BRANCH: ${{ steps.get_version.outputs.branch }}
-          VERSION: ${{ steps.get_version.outputs.version }}
         run: |
           git config user.name "Talsma CI"
           git config user.email "ci-user@talsma-ict.nl"
@@ -57,8 +46,6 @@ jobs:
           git tag -m "Release version ${VERSION}" "${VERSION}"
 #          git push --follow-tags
       - name: Set next snapshot version
-        env:
-          VERSION: ${{ steps.get_version.outputs.version }}
         run: |
           read base minor suffix <<<$(echo "${VERSION}" | perl -pe 's/^(.*?)([0-9]+)([^0-9]*)$/\1 \2 \3/')
           nextSnapshot="${base}$((minor+1))${suffix}-SNAPSHOT"
