--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,16 +56,15 @@ jobs:
           MAVEN_CENTRAL_USERNAME: ${{ secrets.SONATYPE_USER }}
           MAVEN_CENTRAL_TOKEN: ${{ secrets.SONATYPE_PASSWORD }}
           MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-        run: ./mvnw --batch-mode clean deploy
+        run: |
+          ./mvnw --batch-mode clean deploy
+          ./mvnw --batch-mode --no-snapshot-updates deploy -Pgithub-packages -DskipTests -DskipLicenseCheck
       - name: Create Github release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ env.VERSION }}
           name: Release ${{ env.VERSION }}
           draft: true
-          files: |
-            **/target/*.jar
-            **/target/*.jar.asc
       - name: Set next snapshot version
         run: |
           read base minor suffix <<<$(echo "${VERSION}" | perl -pe 's/^(.*?)([0-9]+)([^0-9]*)$/\1 \2 \3/')
