Update maven and use latest LTS jdk in pipeline.
Signed-off-by: Sjoerd Talsma <sjoerdtalsma@users.noreply.github.com>

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright 2022-2025 Talsma ICT
+    Copyright 2022-2026 Talsma ICT
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -67,6 +67,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+        <project.jdk.main>25</project.jdk.main>
+        <project.jdk.legacy>8</project.jdk.legacy>
+
         <!-- test -->
         <junit.version>6.0.1</junit.version>
         <assertj.version>3.27.6</assertj.version>
@@ -80,24 +83,32 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration> <!-- defaults for compile and testCompile -->
-                    <jdkToolchain>
-                        <version>1.8</version>
-                    </jdkToolchain>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
                 <executions>
+                    <execution>
+                        <id>default-compile</id>
+                        <configuration>
+                            <jdkToolchain>
+                                <version>${project.jdk.legacy}</version>
+                            </jdkToolchain>
+                            <source>8</source>
+                            <target>8</target>
+                            <excludes>
+                                <exclude>module-info.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
                     <execution>
                         <id>default-testCompile</id>
                         <configuration>
-                            <release>17</release>
-                            <jdkToolchain>
-                                <version>[17,)</version>
-                            </jdkToolchain>
+                            <release>${project.jdk.main}</release>
                         </configuration>
                     </execution>
                 </executions>
+                <configuration>
+                    <jdkToolchain>
+                        <version>${project.jdk.main}</version>
+                    </jdkToolchain>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -163,7 +174,7 @@
                         </goals>
                         <configuration>
                             <jdkToolchain>
-                                <version>[9,)</version>
+                                <version>[${project.jdk.main},)</version>
                             </jdkToolchain>
                             <doclet>nl.talsmasoftware.umldoclet.UMLDoclet</doclet>
                             <docletArtifact>
